--- a/style.css
+++ b/style.css
@@ -9,3 +9,20 @@
     -webkit-mask-repeat: inherit;
     mask-repeat: inherit;
 }
+
+.beige-bg {
+    background-color: #f5f5f5;
+}
+
+.dot {
+    background-color: #146c43;
+    border-radius: 50%;
+    display: inline-block;
+    line-height: 1em;
+    padding: .15em;
+}
+
+.special-pill {
+    transform: translate(-34px);
+    z-index: 999;
+}
